--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "^4.18.3",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
