--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "express-handlebars": "^7.1.2",
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21"
