--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21"
