--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
