--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
