--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "express-handlebars": "^7.1.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21"
