--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^7.1.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
+    "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
