--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
@@ -20,6 +21,8 @@
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
