--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_CONNECTION = mongodb+srv://xHomerOx:oU4p3VvHAh11lf7s@ecommerce.ix5vqim.mongod
 CLIENT_ID = Iv1.b95f5e07cc384cfb
 CLIENT_SECRET = 53fef6c19113d8d0762bcb76a95e448d55e920a2
 CALLBACK_URL = /api/sessions/github
-PERSISTENCE = MEMORY
+PERSISTENCE = MONGO
