--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
