--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
