--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "mongoose-paginate-v2": "^1.8.0",
