--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21"
   }
 }
