--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "moment-timezone": "^0.5.45",
