--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node -e \"process.env.NODE_ENV='development'; import('./src/app.js')\"",
+    "start:prod": "node -e \"process.env.NODE_ENV='production'; import('./src/app.js')\""
   },
   "keywords": [],
   "author": "",
