--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "chai": "^5.1.1",
+    "mocha": "^10.6.0",
+    "supertest": "^7.0.0"
   }
 }
