--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
