--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node -e \"process.env.NODE_ENV='development'; import('./src/app.js')\"",
+    "start:prod": "node -e \"process.env.NODE_ENV='production'; import('./src/app.js')\""
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "moment-timezone": "^0.5.45",
@@ -28,9 +30,13 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21"
   }
 }
