--- a/src/docs/Products/Products.yaml
+++ b/src/docs/Products/Products.yaml
@@ -1,29 +1,49 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
-  title: Product API
-  description: API for managing products in an ecommerce system
+  title: Products API
+  description: API documentation for product management.
   version: 1.0.0
-
+servers:
+  - url: http://localhost:3000/api
+    description: Local server
 paths:
-  /api/products:
+  /products:
     get:
       summary: Get all products
-      description: Retrieves a list of all available products.
       responses:
         '200':
-          description: A list of products.
+          description: List of all products
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Product'
-        '404':
-          description: No products found.
-
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Status of the request
+                  payload:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                          description: Product ID
+                        title:
+                          type: string
+                          description: Product title
+                        price:
+                          type: number
+                          format: float
+                          description: Product price
+                        stock:
+                          type: integer
+                          description: Product stock
+                        thumbnail:
+                          type: string
+                          description: URL of the product thumbnail
     post:
-      summary: Create a new product
-      description: Creates a new product in the database.
+      summary: Add a new product
       requestBody:
         required: true
         content:
@@ -31,62 +51,90 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                title:
                   type: string
-                  description: The name of the product.
-                description:
-                  type: string
-                  description: The description of the product.
                 price:
                   type: number
                   format: float
-                  description: The price of the product.
+                stock:
+                  type: integer
                 thumbnail:
                   type: array
                   items:
                     type: string
-                  description: Array of filenames for product thumbnails.
-      responses:
-        '201':
-          description: Product created successfully.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Product'
-        '400':
-          description: Invalid request, please check product data.
-
-  /api/products/{pid}:
-    get:
-      summary: Get a product by ID
-      description: Retrieves details of a specific product by its ID.
-      parameters:
-        - in: path
-          name: pid
-          required: true
-          schema:
-            type: string
-          description: The ID of the product to retrieve.
+                  description: URLs of product thumbnails
       responses:
         '200':
-          description: Details of the requested product.
+          description: Product added successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Product'
-        '404':
-          description: Product not found.
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Status of the request
+                  payload:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                        description: Product ID
+        '400':
+          description: Error adding product
+
+  /products/{pid}:
+    get:
+      summary: Get a product by ID
+      parameters:
+        - name: pid
+          in: path
+          required: true
+          description: Product ID
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Product details
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Status of the request
+                  payload:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                        description: Product ID
+                      title:
+                        type: string
+                        description: Product title
+                      price:
+                        type: number
+                        format: float
+                        description: Product price
+                      stock:
+                        type: integer
+                        description: Product stock
+                      thumbnail:
+                        type: string
+                        description: URL of the product thumbnail
+        '400':
+          description: Error retrieving product
 
     put:
       summary: Update a product by ID
-      description: Updates details of a specific product by its ID.
       parameters:
-        - in: path
-          name: pid
+        - name: pid
+          in: path
           required: true
+          description: Product ID
           schema:
             type: string
-          description: The ID of the product to update.
       requestBody:
         required: true
         content:
@@ -94,84 +142,84 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                title:
                   type: string
-                  description: The updated name of the product.
-                description:
-                  type: string
-                  description: The updated description of the product.
                 price:
                   type: number
                   format: float
-                  description: The updated price of the product.
+                stock:
+                  type: integer
                 thumbnail:
                   type: array
                   items:
                     type: string
-                  description: Array of filenames for updated product thumbnails.
+                  description: Updated URLs of product thumbnails
       responses:
         '200':
-          description: Product updated successfully.
+          description: Product updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Status of the request
+                  message:
+                    type: string
+                    description: Success message
         '400':
-          description: Invalid request, please check product data.
-        '404':
-          description: Product not found.
+          description: Error updating product
 
     delete:
       summary: Delete a product by ID
-      description: Deletes a specific product by its ID.
       parameters:
-        - in: path
-          name: pid
+        - name: pid
+          in: path
           required: true
+          description: Product ID
           schema:
             type: string
-          description: The ID of the product to delete.
       responses:
         '200':
-          description: Product deleted successfully.
-        '404':
-          description: Product not found.
+          description: Product deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Status of the request
+                  message:
+                    type: string
+                    description: Success message
+        '400':
+          description: Error deleting product
 
-components:
-  schemas:
-    Product:
-      type: object
-      required:
-        - title
-        - description
-        - code
-        - price
-        - stock
-        - category
-      properties:
-        id:
-          type: string
-          description: The unique identifier for the product.
-        title:
-          type: string
-          description: The title or name of the product.
-        description:
-          type: string
-          description: The description of the product.
-        code:
-          type: string
-          description: The unique code or SKU of the product.
-        price:
-          type: number
-          format: float
-          description: The price of the product.
-        status:
-          type: boolean
-          description: The status of the product (true for active, false for inactive).
-        stock:
-          type: integer
-          description: The available stock quantity of the product.
-        category:
-          type: string
-          description: The category or type of the product.
-        thumbnail:
-          type: array
-          items:
+  /products/{pid}/email:
+    delete:
+      summary: Send an email notification when a product is deleted
+      parameters:
+        - name: pid
+          in: path
+          required: true
+          description: Product ID
+          schema:
             type: string
-          description: Array of filenames for product thumbnails.
+      responses:
+        '200':
+          description: Email sent successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Status of the request
+                  success:
+                    type: string
+                    description: Success message
+        '400':
+          description: Error sending email
