--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node -e \"process.env.NODE_ENV='development'; import('./src/app.js')\"",
-    "start:prod": "node -e \"process.env.NODE_ENV='production'; import('./src/app.js')\""
+    "start:prod": "node -e \"process.env.NODE_ENV='production'; import('./src/app.js')\"",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +40,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "chai": "^5.1.1",
+    "mocha": "^10.7.0",
+    "supertest": "^7.0.0"
   }
 }
