--- a/src/docs/Carts/Carts.yaml
+++ b/src/docs/Carts/Carts.yaml
@@ -4,7 +4,7 @@ info:
   description: API documentation for cart management.
   version: 1.0.0
 servers:
-  - url: http://localhost:3000/api
+  - url: http://localhost:8080/apidocs
     description: Local server
 paths:
   /carts:
